--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"framer-motion": "^12.29.2",
+		"gsap": "^3.14.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
@@ -54,5 +56,10 @@
 	"prettier": {
 		"useTabs": true,
 		"tabWidth": 4
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.17",
+		"postcss": "^8.4.35",
+		"tailwindcss": "^3.4.1"
 	}
 }
